--- a/Frontend/src/components/signup/signup.css
+++ b/Frontend/src/components/signup/signup.css
@@ -1,38 +1,47 @@
-.SignUpComponent{
-    width : 300px;
-    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+.SignUpComponent{ 
+    width: 300px;
+    padding: 50px;
     background: #fff;
-    padding: 20px;
-    margin: 8% auto 0;
-    text-align: center;
+	box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+	margin:  8% auto 0;
+	text-align: center;
+	background-position: center;
+	height: 100vh;
+	background-size: cover;
 }
 
-.input-box{
-    border-radius: 20px;
-    padding: 10px;
-    margin: 10px 0;
-    width: 100%;
-    border: 1px solid #999;
-    outline: none;
+.form{
+	position: relative;
+	z-index: 1;
+	background: rgba(24, 56, 196, 0.8);
+	max-width: 360px;
+	margin: 0 auto 100px;
+	padding: 45px;
+	text-align: center;
 }
 
-button{
-    color: #fff;
-    width: 100%;
-    padding: 10px;
-    border-radius: 20px;
-    font-size: 15px;
-    margin: 10px 0;
-    border: none;
-    outline: none;
-    cursor: pointer;
+.form input{
+	font-family: "Roboto",sans-serif;
+	outline: 1;
+	background: #f2f2f2;
+	width:100%;
+	border: 0;
+	margin: 0 0 15px;
+	padding: 15px;
+	box-sizing: border-box;
+	font-size: 14px;
 }
 
-.btn{
-    background-color: #1c8adb;
-}
-
-a{
-    text-decoration: none;
+.form button{
+   font-family: "Roboto",sans-serif;
+   text-transform: uppercase;
+   outline: 0;
+   background: #4CAF50;
+   width: 100%;
+   border: 0;
+   padding: 15px;
+   color: #FFFFFF;
+   font-size: 14px;
+   cursor: pointer;
 }
 
