--- a/Frontend/src/components/signup/signup.css
+++ b/Frontend/src/components/signup/signup.css
@@ -1,4 +1,4 @@
-.SignUpComponent{ 
+/* .SignUpComponent{ 
     width: 300px;
     padding: 50px;
     background: #fff;
@@ -43,5 +43,8 @@
    color: #FFFFFF;
    font-size: 14px;
    cursor: pointer;
-}
+} */
 
+.form-inputs p {
+	color: red;
+}
