Coaching component,Stationary component,sign up validation

--- a/Frontend/src/components/signup/signup.css
+++ b/Frontend/src/components/signup/signup.css
@@ -1,4 +1,4 @@
-/* .SignUpComponent{ 
+ /*.SignUpComponent{ 
     width: 300px;
     padding: 50px;
     background: #fff;
@@ -8,9 +8,9 @@
 	background-position: center;
 	height: 100vh;
 	background-size: cover;
-}
+}*/
 
-.form{
+/*.form{
 	position: relative;
 	z-index: 1;
 	background: rgba(24, 56, 196, 0.8);
@@ -18,13 +18,13 @@
 	margin: 0 auto 100px;
 	padding: 45px;
 	text-align: center;
-}
+}*/
 
 .form input{
 	font-family: "Roboto",sans-serif;
 	outline: 1;
 	background: #f2f2f2;
-	width:100%;
+	width:20%;
 	border: 0;
 	margin: 0 0 15px;
 	padding: 15px;
@@ -37,14 +37,19 @@
    text-transform: uppercase;
    outline: 0;
    background: #4CAF50;
-   width: 100%;
+   width: 10%;
    border: 0;
    padding: 15px;
    color: #FFFFFF;
    font-size: 14px;
    cursor: pointer;
-} */
+} 
 
 .form-inputs p {
 	color: red;
+}
+
+.form-label{
+	width: 150px;
+	
 }
